--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,38 +1,42 @@
 # Tests
 option(BUILD_CRUSH_TEST "Build Crush tests (requires testu01)" OFF)
 
-# Get sources
-file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-set(rocRAND_TEST_SRCS ${tmp})
+# Get rocRAND tests source files
+file(GLOB rocRAND_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
-foreach(EXCLUDE ${tmp})
-    list(REMOVE_ITEM rocRAND_TEST_SRCS "${EXCLUDE}")
+foreach(to_exclude ${tmp})
+    list(REMOVE_ITEM rocRAND_TEST_SRCS "${to_exclude}")
 endforeach()
-set_source_files_properties(${rocRAND_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
 
-# Build
-include_directories(${PROJECT_SOURCE_DIR}/library/include) # hipcc workaround
-include_directories(${PROJECT_BINARY_DIR}/library/include) # hipcc workaround
-include_directories(${PROJECT_SOURCE_DIR}/library/src) # hipcc workaround
-include_directories(SYSTEM ${GTEST_INCLUDE_DIRS}) # hipcc workaround
-
+# Build rocRAND tests
 foreach(test_src ${rocRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
-    hip_add_executable(${test_name} "${test_src}")
-    add_dependencies(${test_name} rocrand ${ROCRAND_TEST_DEPENDENCIES})
-    get_target_property(rocRAND_rpath rocrand BINARY_DIR)
-    if(NOT GTEST_ROOT)
-        set(GTest_rpath "${PROJECT_BINARY_DIR}/gtest/lib")
+    # nvcc/CUDA
+    if(HIP_PLATFORM STREQUAL "nvcc")
+        set_source_files_properties(${test_src}
+            PROPERTIES
+                CUDA_SOURCE_PROPERTY_FORMAT OBJ
+        )
+        CUDA_ADD_EXECUTABLE(${test_name} ${test_src})
+    # hcc/ROCm
     else()
-        set(GTest_rpath "${GTEST_ROOT}/lib")
+        add_executable(${test_name} ${test_src})
     endif()
-    target_link_libraries(
-        ${test_name}
-        -Wl,-rpath,${rocRAND_rpath}:${GTest_rpath} # workaround for HIP linker
-        $<TARGET_FILE:rocrand>
+    # GTEST include dirs
+    target_include_directories(${test_name} SYSTEM
+        PUBLIC
+            ${GTEST_INCLUDE_DIRS}
+    )
+    target_include_directories(${test_name}
+        PUBLIC
+            ${PROJECT_SOURCE_DIR}/library/src
+    )
+    target_link_libraries(${test_name}
+        rocrand
         ${GTEST_BOTH_LIBRARIES}
     )
     if(HIP_PLATFORM STREQUAL "hcc")
+        target_link_libraries(${test_name} hip::hip_hcc hip::hip_device)
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
         endforeach()
@@ -40,13 +44,13 @@ foreach(test_src ${rocRAND_TEST_SRCS})
     set_target_properties(
         ${test_name}
         PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
+            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
     )
     add_test(NAME ${test_name} COMMAND $<TARGET_FILE:${test_name}>)
 endforeach()
 
 # Fortran Wrapper Tests
-if (BUILD_FORTRAN_WRAPPER)
+if(BUILD_FORTRAN_WRAPPER)
     add_subdirectory(fortran)
 endif()
 
@@ -55,46 +59,52 @@ if(BUILD_CRUSH_TEST)
     add_subdirectory(crush)
 endif()
 
-# hipRand Tests
-file(GLOB tmp ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
-set(hipRAND_TEST_SRCS ${tmp})
-set_source_files_properties(${hipRAND_TEST_SRCS} PROPERTIES HIP_SOURCE_PROPERTY_FORMAT TRUE)
+# Get hipRAND tests source files
+file(GLOB hipRAND_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
 
+# Build hipRAND tests
 foreach(test_src ${hipRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
-    hip_add_executable(${test_name} "${test_src}")
-    if(HIP_PLATFORM STREQUAL "hcc")
-        add_dependencies(${test_name} rocrand)
+    # nvcc/CUDA
+    if(HIP_PLATFORM STREQUAL "nvcc")
+        set_source_files_properties(${test_src}
+            PROPERTIES
+                CUDA_SOURCE_PROPERTY_FORMAT OBJ
+        )
+        CUDA_ADD_EXECUTABLE(${test_name} ${test_src})
+    # hcc/ROCm
+    else()
+        add_executable(${test_name} ${test_src})
     endif()
-    add_dependencies(${test_name} hiprand ${ROCRAND_TEST_DEPENDENCIES})
-    get_target_property(hipRAND_rpath hiprand BINARY_DIR)
-    if(HIP_PLATFORM STREQUAL "hcc")
-        get_target_property(rocRAND_rpath rocrand BINARY_DIR)
-        if(NOT GTEST_ROOT)
-            set(GTest_rpath "${PROJECT_BINARY_DIR}/gtest/lib")
-        else()
-            set(GTest_rpath "${GTEST_ROOT}/lib")
-        endif()
-        target_link_libraries(
-            ${test_name}
-            -Wl,-rpath,${hipRAND_rpath}:${rocRAND_rpath}:${GTest_rpath} # workaround for HIP linker
-            $<TARGET_FILE:hiprand> $<TARGET_FILE:rocrand>
+    # GTEST include dirs
+    target_include_directories(${test_name} SYSTEM
+        PUBLIC
+            ${GTEST_INCLUDE_DIRS}
+    )
+    target_include_directories(${test_name}
+        PUBLIC
+            ${PROJECT_SOURCE_DIR}/library/src
+    )
+    if(HIP_PLATFORM STREQUAL "nvcc")
+        target_link_libraries(${test_name}
+            hiprand
+            ${CUDA_curand_LIBRARY}
+            ${GTEST_BOTH_LIBRARIES}
+        )
+    else()
+        target_link_libraries(${test_name}
+            hiprand
+            rocrand
+            hip::hip_hcc hip::hip_device
             ${GTEST_BOTH_LIBRARIES}
         )
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
         endforeach()
-    else()
-        target_link_libraries(
-            ${test_name}
-            "-lcurand" hiprand
-            ${GTEST_BOTH_LIBRARIES}
-        )
     endif()
-    set_target_properties(
-        ${test_name}
+    set_target_properties(${test_name}
         PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
+            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test"
     )
     add_test(NAME ${test_name} COMMAND $<TARGET_FILE:${test_name}>)
 endforeach()
