--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,43 @@
+# MIT License
+#
+# Copyright (c) 2017 Advanced Micro Devices, Inc. All rights reserved.
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+
 image: rocm/rocm-terminal:latest
 
 variables:
   SUDO_CMD: "" # Must be "sudo" on images which dont use root user
   DEPS_DIR: "$CI_PROJECT_DIR/__dependencies"
-  CMAKE_URL: "https://cmake.org/files/v3.8/cmake-3.8.1-Linux-x86_64.tar.gz"
+  CMAKE_URL: "https://cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz"
   # General build flags
   CXXFLAGS: ""
   CMAKE_OPTIONS: ""
   # Local build options
   LOCAL_CXXFLAGS: ""
   LOCAL_CMAKE_OPTIONS: ""
-  # TERM
-  TERM: xterm
 
 before_script:
   # We had to add sudo because rocm image does not use root as user
   - hipconfig
   - $SUDO_CMD apt-get update -qq
-  - $SUDO_CMD apt-get install -y -qq git wget tar xz-utils bzip2 build-essential xterm pkg-config
-  - $SUDO_CMD apt-get install -y -qq g++ gfortran
+  - $SUDO_CMD apt-get install -y -qq ca-certificates git wget tar xz-utils bzip2 build-essential pkg-config g++ gfortran
   # cmake
   - mkdir -p $DEPS_DIR/cmake
   - wget --no-check-certificate --quiet -O - $CMAKE_URL | tar --strip-components=1 -xz -C $DEPS_DIR/cmake
@@ -40,15 +59,18 @@ build:rocm:
   artifacts:
     paths:
     - build/library/
-    - build/test/
-    - build/benchmark/
+    - build/test/crush_test_*
+    - build/test/test_*
+    - build/test/stat_test_*
+    - build/test/CTestTestfile.cmake
+    - build/benchmark/benchmark_*
     - build/gtest/
     - build/testu01/
     - build/CMakeCache.txt
     - build/CTestTestfile.cmake
-    - build/Makefile
     - build/*.deb
     - build/*.zip
+    expire_in: 4 weeks
 
 test:rocm:
   stage: test
@@ -58,10 +80,10 @@ test:rocm:
     - build:rocm
   script:
     - cd build
-    - ctest --output-on-failure
-    - ./benchmark/benchmark_rocrand_generate --dis all --engine all --trials 5
-    - ./benchmark/benchmark_rocrand_kernel --dis all --engine all --trials 5
-    - ./test/crush_test_rocrand --help # Just check if works
+    - $SUDO_CMD ctest --output-on-failure
+    - $SUDO_CMD ./benchmark/benchmark_rocrand_generate --dis all --engine all --trials 5
+    - $SUDO_CMD ./benchmark/benchmark_rocrand_kernel --dis all --engine all --trials 5
+    - $SUDO_CMD ./test/crush_test_rocrand --help # Just check if works
 
 test:rocm_python:
   stage: test
@@ -78,24 +100,24 @@ test:rocm_python:
     - export ROCRAND_PATH=$CI_PROJECT_DIR/build/library/
     # rocRAND Wrapper
     - cd $CI_PROJECT_DIR/python/rocrand
-    - python setup.py test
-    - python3 setup.py test
+    - $SUDO_CMD python setup.py test
+    - $SUDO_CMD python3 setup.py test
     - pip install .
-    - python tests/rocrand_test.py
+    - $SUDO_CMD python tests/rocrand_test.py
     - pip uninstall --yes rocrand
     - pip3 install .
-    - python3 tests/rocrand_test.py
+    - $SUDO_CMD python3 tests/rocrand_test.py
     - pip3 uninstall --yes rocrand
     - python setup.py build_sphinx
     # hipRAND Wrapper
     - cd $CI_PROJECT_DIR/python/hiprand
-    - python setup.py test
-    - python3 setup.py test
+    - $SUDO_CMD python setup.py test
+    - $SUDO_CMD python3 setup.py test
     - pip install .
-    - python tests/hiprand_test.py
+    - $SUDO_CMD python tests/hiprand_test.py
     - pip uninstall --yes hiprand
     - pip3 install .
-    - python3 tests/hiprand_test.py
+    - $SUDO_CMD python3 tests/hiprand_test.py
     - pip3 uninstall --yes hiprand
     - python setup.py build_sphinx
 
@@ -111,6 +133,6 @@ test:rocm_deb_package:
     - mkdir ../build_package_test && cd ../build_package_test
     - cmake ../test/package/.
     - make VERBOSE=1
-    - ctest --output-on-failure
+    - $SUDO_CMD ctest --output-on-failure
     - ldd ./test_hiprand
     - $SUDO_CMD dpkg -r rocrand
