--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,25 @@
+# MIT License
+#
+# Copyright (c) 2018 Advanced Micro Devices, Inc. All rights reserved.
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
 
 # Install prefix
@@ -8,11 +30,6 @@ list(APPEND CMAKE_MODULE_PATH
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules
     ${HIP_PATH}/cmake /opt/rocm/hip/cmake # FindHIP.cmake
 )
-
-# Identify HIP platform (nvcc or hcc), and select C++ compiler:
-# ROCm - hcc
-# CUDA - g++ (nvcc is used via functions from CUDA package)
-include(cmake/SetToolchain.cmake)
 
 #
 # rocRAND project
@@ -27,6 +44,9 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 endif()
 
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE CACHE BOOLEAN "Add paths to linker search and installed rpath")
+
+# Verify that hcc compiler is used on ROCM platform
+include(cmake/VerifyCompiler.cmake)
 
 # Build CXX flags
 set(CMAKE_CXX_STANDARD 11)
@@ -49,8 +69,8 @@ print_configuration_summary()
 
 # Set version variables
 include(cmake/Common.cmake)
-create_version_vars(hiprand 1 7 1)
-create_version_vars(rocrand 1 7 1)
+create_version_vars(hiprand 1 8 0)
+create_version_vars(rocrand 1 8 0)
 
 # AMD targets
 set(AMDGPU_TARGETS gfx803;gfx900 CACHE STRING "List of specific machine types for library to target")
