add gfx803 and gfx900 for ROCm 1.9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ create_version_vars(hiprand 1 8 1)
 create_version_vars(rocrand 1 8 1)
 
 # AMD targets
-set(AMDGPU_TARGETS gfx906 CACHE STRING "List of specific machine types for library to target")
+set(AMDGPU_TARGETS gfx803;gfx900;gfx906 CACHE STRING "List of specific machine types for library to target")
 
 # Tools
 add_subdirectory(tools)
