--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(BUILD_FORTRAN_WRAPPER "Build Fortran wrapper" OFF)
 option(BUILD_TEST "Build tests (requires googletest)" ON)
+option(BUILD_CRUSH_TEST "Build Crush tests (requires TestU01)" OFF)
 option(BUILD_BENCHMARK "Build benchmarks" OFF)
 
 # Include cmake scripts
